# cookier

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  REFERENCES.md  TASKS_HULVDAN.md  TASKS_HULVDAN.txt  TASKS_INTERNET.txt  effects.txt  pyproject.toml  statnames.txt  sweet24.aco  sweet24.ase
.nvim-personal/: cli.ahk  setup.lua  startup.lua
assets/: localization.csv  localization_english.csv
assets/art/: atlas_d2.ftpp
assets/art/palettes/: sweet24.pal
assets/art/src/: dist_icon2.clip  main2.clip
assets/art/src/main/: main.cmc  page0002.clip  page0006.clip  page0010.clip
assets/art/textures/: vignette.psd
assets/sfx/: reaper_launch_codegen.lua
assets/sfx/src/: sfx.rpp
assets/sfx/src/_sfx/: 02-251203_1341.rpp  02-251203_1342.rpp  03-ui_error-251203_1411-01.rpp  03-ui_error-251203_1411.rpp  04-ui_hover_small-251203_1412.rpp  07-251203_1342.rpp  game_achievement.rpp  game_big_text_whoosh.rpp  game_blow.rpp  game_bonk.rpp  game_bonk_apple.rpp  game_bonk_fist.rpp  game_coin.rpp  game_crossbow_shot.rpp  game_explosion.rpp  game_fire_missile.rpp  game_fire_missile_trail.rpp  game_flame.rpp  game_flamethrower.rpp  game_gun_shot.rpp  game_hit_blade.rpp  game_knife_stab.rpp  game_laser_shot.rpp  game_level_up.rpp  game_lightning.rpp  game_lightning_hit.rpp  game_magical_missile.rpp  game_metallic_bonk.rpp  game_mob_boss_shoot.rpp  game_mob_cooravie_shoot.rpp  game_mob_hurt.rpp  game_pickup_apple.rpp  game_pickup_chest.rpp  game_pickup_coin.rpp  game_player_died.rpp  game_player_dodge.rpp  game_player_hurt.rpp  game_player_hurt_kick.rpp  game_run_lost.rpp  game_run_won.rpp  (+11 more)
cli/: bf_cli.py  bf_game.py  bf_gamelib.py  bf_image.py  bf_image_outline.py  bf_image_split.py  bf_lib.py  bf_swatch.py  bf_swatch_aco.py  bf_typer.py  cli.py  makefile  win_build_debug.bat  win_build_release.bat  win_clean_cmake.bat  win_clean_temp.bat  win_codegen_debug.bat  win_meld.bat  win_start.bat  win_test.bat
docs/: builds.txt  effects.txt  items.txt  weapons.txt  wisdom.txt
src/: bf_game.cpp  bf_lib.cpp  bf_lib_base.cpp  bf_lib_containers.cpp  bf_lib_instrument.cpp  bf_lib_math.cpp  bf_lib_memory.cpp  bf_lib_rand.cpp  bf_version.cpp  main.cpp  vendor_bgfx_config.cpp
src/engine/: bf_bgfx_imgui.cpp  bf_clay_ui.cpp  bf_engine.cpp  bf_engine_config.cpp  bf_game_exe.cpp
src/engine/imgui/: imgui_impl_bgfx.cpp
src/game/: bf_constants.cpp  bf_game.cpp  bf_game.h  bf_gamelib.fbs  bf_save.fbs  gamelib.yaml  gamelib_achievements_order.json
